# Presta-o-www.gbarbosa.com.br

./: build.py  excel_summary.md  excel_summary.txt  main.py  pyproject.toml  read_excel.py  test.py  test_pw.py  vercel.json
arquivos/: copia-de-analise-gbarbosa-diario.xlsx
public/: data.json  index.html  script.js  style.css
static/: index.html
