[project]
name = "uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.134.0",
    "pandas>=2.3.3",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]
